--- a/css/mobile.css
+++ b/css/mobile.css
@@ -132,45 +132,70 @@
     .mobile-nav-btn.active {
         color: var(--accent-blue);
     }
+    
     #global-player {
-        left: 15px;
-        right: 15px;
+        left: 8px;
+        right: 8px;
         bottom: 80px;
-        padding: 8px 12px;
-        gap: 10px;
+        padding: 8px;
+        gap: 12px;
+        display: none;
+        grid-template-columns: auto 1fr auto;
+        grid-template-rows: 1fr auto;
+        align-items: center;
+        cursor: pointer;
     }
     #player-song-info {
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+        gap: 12px;
         min-width: 0;
-        flex-shrink: 1;
-        gap: 10px;
     }
     #player-cover {
-        width: 40px;
-        height: 40px;
+        width: 48px;
+        height: 48px;
     }
-    #player-title {
+    .player-text-info {
+        overflow: hidden;
+    }
+    #player-title, #player-subtitle {
+        white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
-        white-space: nowrap;
     }
     #player-main {
-        width: auto;
-        flex-grow: 1;
+        grid-column: 3 / 4;
+        grid-row: 1 / 2;
+        flex-direction: row;
     }
     #player-controls {
-        gap: 10px;
+        gap: 12px;
     }
-    .player-btn {
-        font-size: 16px;
-    }
-    .player-btn#play-pause-btn {
+    #player-controls .player-btn {
         font-size: 24px;
     }
-    #player-extra-controls {
-        min-width: auto;
+    #player-controls #shuffle-btn,
+    #player-controls #prev-btn,
+    #player-controls #repeat-btn {
+        display: none;
     }
-    #close-player-btn {
+    #player-timeline-desktop, #player-extra-controls {
+        display: none;
+    }
+    #player-timeline-mobile {
         display: block;
-        font-size: 20px;
+        grid-column: 1 / -1;
+        grid-row: 2 / 3;
+        padding: 0;
+        margin-top: 4px;
+    }
+    #seek-bar-mobile {
+        height: 2px;
+    }
+    #seek-bar-mobile::-webkit-slider-thumb {
+        display: none;
+    }
+    #seek-bar-mobile::-moz-range-thumb {
+        display: none;
     }
 }
