фикс широкого мини плеера на пк и тел, кнопка скрыть глобального плеера, фикс переключения вклдок на тел, описание стало меньше

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -134,9 +134,9 @@
     }
     
     #global-player {
-        left: 8px;
-        right: 8px;
-        bottom: 80px;
+        left: 15px;
+        right: 15px;
+        bottom: 75px;
         padding: 8px;
         gap: 12px;
         display: none;
@@ -167,6 +167,8 @@
         grid-column: 3 / 4;
         grid-row: 1 / 2;
         flex-direction: row;
+        max-width: none;
+        margin: 0;
     }
     #player-controls {
         gap: 12px;
