еще раз пробую передвинуть кнопки

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -161,6 +161,7 @@
         text-overflow: ellipsis;
     }
     #player-main {
+        flex-grow: 0;
         flex-direction: row;
         max-width: none;
         margin: 0;
