--- a/css/library.css
+++ b/css/library.css
@@ -248,7 +248,7 @@
     border-radius: 6px; 
     list-style: none; 
     padding: 5px; 
-    width: 200px; 
+    width: 180px; 
     z-index: 10; 
 }
 .song-menu.active { 
@@ -307,18 +307,19 @@
 .move-to-project-submenu {
     display: none;
     position: absolute;
-    left: -200px; /* Position to the left of the parent menu */
+    left: -180px; /* Position to the left of the parent menu */
     top: 0;
     background-color: #21262d;
     border: 1px solid var(--border);
     border-radius: 6px;
     list-style: none;
     padding: 5px;
-    width: 200px;
+    width: 180px;
     z-index: 11;
     max-height: 200px;
     overflow-y: auto;
 }
-.move-to-project-action:hover > .move-to-project-submenu {
+.move-to-project-action:hover > .move-to-project-submenu,
+.move-to-project-submenu.is-open {
     display: block;
 }
