переливание медленнее, форматирование в караоке, текст посередине на пк

--- a/css/player.css
+++ b/css/player.css
@@ -158,7 +158,7 @@
     top: 0; left: 0; right: 0; bottom: 0;
     background: var(--adaptive-gradient, transparent);
     background-size: 400% 400%;
-    animation: animateGradient 15s ease infinite;
+    animation: animateGradient 25s ease infinite;
     filter: brightness(0.4);
     z-index: -2;
     transition: background 0.5s ease-in-out;
@@ -232,6 +232,11 @@
     margin-bottom: 20px;
     -webkit-mask-image: linear-gradient(transparent 0%, black 15%, black 85%, transparent 100%);
     mask-image: linear-gradient(transparent 0%, black 15%, black 85%, transparent 100%);
+}
+@media (min-width: 769px) {
+    #fs-lyrics-content {
+        text-align: center;
+    }
 }
 #fs-lyrics-content .lyric-segment {
     transition: color 0.3s ease-in-out, text-shadow 0.3s ease-in-out;
