--- a/css/player.css
+++ b/css/player.css
@@ -288,6 +288,9 @@
     font-size: 24px;
     color: var(--text-primary);
 }
+#fs-controls .player-btn.active {
+    color: var(--accent-blue);
+}
 #fs-controls #fs-play-pause-btn {
     font-size: 48px;
 }
