--- a/css/modals.css
+++ b/css/modals.css
@@ -36,8 +36,14 @@
     line-height: 1; 
 }
 #login-box h3 { 
-    margin-bottom: 16px; 
+    margin-bottom: 24px; 
     font-weight: 600; 
+}
+#login-box .g_id_signin {
+    margin: 0 auto; /* Центрирование кнопки Google */
+}
+#login-box hr.divider {
+    margin: 20px 0;
 }
 #access-key-input { 
     width: 100%; 
