добавлен профиль в новигацию, пока там пусто, модели нейросетей

--- a/css/style.css
+++ b/css/style.css
@@ -7,4 +7,5 @@
 @import url('player.css');
 @import url('modals.css');
 @import url('editor.css');
+@import url('profile.css');
 @import url('mobile.css');
